# pretix-cwa

./: .gitlab-ci.yml  .update-locales.sh  MANIFEST.in  Makefile  README.md  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_cwa/: __init__.py  apps.py  forms.py  generator.py  signals.py  tasks.py  urls.py  views.py
pretix_cwa/cwa/: __init__.py  cwa.py  cwa_pb2.py  test_cwa.py
pretix_cwa/locale/: django.pot
pretix_cwa/locale/de/LC_MESSAGES/: django.po
pretix_cwa/locale/de_Informal/LC_MESSAGES/: django.po
pretix_cwa/static/pretix_cwa/: signage.scss
pretix_cwa/templates/pretix_cwa/: settings.html  signage.html
